force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/ucinn_ascendv2__Manual_Merge_Tab__mdt.object-meta.xml
<CustomObject>
    <description>Tabs to display on the Interim Merge Page</description>
    <label>Merge Tab</label>
    <pluralLabel>Merge Tabs</pluralLabel>
</CustomObject>