force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Additional_Contact_Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Additional_Contact_Fields_To_Display__c</fullName>
    <description>For displaying fields on related list type tabs.</description>
    <inlineHelpText>For displaying fields on related list type tabs. Example: field1__c, field2__c</inlineHelpText>
    <label>Additional Contact Fields To Display</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>