force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Additional_Interim_Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Additional_Interim_Fields_To_Display__c</fullName>
    <description>For displaying additional interim fields per tab.</description>
    <inlineHelpText>For displaying additional interim fields per tab. Example: field1__c, field2__c</inlineHelpText>
    <label>Additional Interim Fields To Display</label>
    <type>TextArea</type>
</CustomField>