force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Order__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Order__c</fullName>
    <description>Ordering that the tabs will appear in.</description>
    <inlineHelpText>Ordering that the tabs will appear in.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>