force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Parent_Object_Lookup_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Parent_Object_Lookup_API_Name__c</fullName>
    <description>If the target is a junction object, use this to specify what field looks up to the parent SObject.</description>
    <inlineHelpText>If the target is a junction object, use this to specify what field looks up to the parent SObject.</inlineHelpText>
    <label>Parent Object Lookup API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>