force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Preferred_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Preferred_Field_API_Name__c</fullName>
    <description>For use with the Interim Card source tab type, and the Related List target tab type. This denotes the field that is used on the related SObject to mark a record as preferred.</description>
    <inlineHelpText>For use with the Interim Card source tab type, and the Related List target tab type. This denotes the field that is used on the related SObject to mark a record as preferred.</inlineHelpText>
    <label>Preferred Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>