force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Preferred_Record_Picklist_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Preferred_Record_Picklist_API_Name__c</fullName>
    <description>For use with the Interim Card source tab type and the Related List target tab type. API name of a picklist on the Interim denotes a preferred record. Picklist values should be in the following form. &quot;Phone 1&quot;, or &quot;Address Relation 2&quot;.</description>
    <inlineHelpText>For use with the Interim Card source tab type and the Related List target tab type. API name of a picklist on the Interim denotes a preferred record. Picklist values should be in the following form. &quot;Phone 1&quot;, or &quot;Address Relation 2&quot;.</inlineHelpText>
    <label>Preferred Record Picklist API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>