force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Source_Lookup_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Lookup_API_Name__c</fullName>
    <description>API Name of lookup to Interim if source object is not an Interim. Only use for Related List Source types.</description>
    <inlineHelpText>API Name of lookup to Interim if source object is not an Interim. Only use for Related List Source types.</inlineHelpText>
    <label>Source Lookup API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>