force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Source_SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_SObject_Name__c</fullName>
    <defaultValue>&quot;Interim__c&quot;</defaultValue>
    <description>SObject that contains the source information that is to be merged over. Default is Interim.</description>
    <inlineHelpText>SObject that contains the source information that is to be merged over. Default is Interim.</inlineHelpText>
    <label>Source SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>