force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Source_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Type__c</fullName>
    <description>Related List: For the use of related records as the source. Interim Cards: For use of Interim fields as the source.</description>
    <inlineHelpText>Related List: For the use of related records as the source. Interim Cards: For use of Interim fields as the source.</inlineHelpText>
    <label>Source Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Related List</fullName>
                <default>true</default>
                <label>Related List</label>
            </value>
            <value>
                <fullName>Interim Cards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>