force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Target_Lookup_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_Lookup_API_Name__c</fullName>
    <description>API Name of lookup to Interim if target object is not a Contact. Only use for Related List Target types.</description>
    <inlineHelpText>API Name of lookup to Interim if target object is not a Contact. Only use for Related List Target types.</inlineHelpText>
    <label>Target Lookup API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>