force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Tab__mdt/fields/ucinn_ascendv2__Target_SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_SObject_Name__c</fullName>
    <description>Name of Related SObject to get information from. Only needed for Related List tab type.</description>
    <inlineHelpText>Name of Related SObject to get information from. Only needed for Related List tab type.</inlineHelpText>
    <label>Target SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>